# astrobee

./: doc_version_select.js
asap/coordinator/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
asap/coordinator/include/coordinator/: MPC_Guidance_v3_sand.cpp  MPC_Guidance_v3_sand.h  MPC_Guidance_v3_sand_types.h  StatusSecondary.h  controller1.cpp  controller1.h  coordinator.tpp  ert_main.cpp  mldivide.cpp  mldivide.h  primary_nodelet.h  primary_tests.hpp  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  secondary_nodelet.h
asap/coordinator/include/eigen_conversions/: eigen_msg.h
asap/coordinator/launch/: primary_coordinator.launch  secondary_coordinator.launch
asap/coordinator/msg/: StatusPrimary.msg  StatusSecondary.msg
asap/coordinator/src/: primary_nodelet.cc  secondary_nodelet.cc
asap/data/: CMakeLists.txt
asap/data/scripts/: README.md
asap/execute_asap/: CMakeLists.txt  package.xml
asap/execute_asap/config/: my_node_params.yaml  primary_coord_params.yaml  secondary_coord_params.yaml
asap/execute_asap/launch/: asap_primary_LLP.launch  asap_primary_MLP.launch  asap_secondary_LLP.launch  asap_secondary_MLP.launch
asap/execute_asap/scripts/: asap_config.py  asap_primary.py  asap_secondary.py  execute_asap.py  pub_gds_topics.py  pub_status_secondary.py
asap/my_node/: CMakeLists.txt  README.md  package.xml
asap/my_node/launch/: my_node.launch
asap/my_node/src/: my_node.py
astrobee/scripts/: env_wrapper_asap.sh
astrosee/scripts/: env_wrapper.sh
debian/: .gitignore  astrobee-astrobatics-mpc.install  astrobee-astrosee.install  control  rules
scripts/: configure.sh
scripts/postprocessing/coverage_analysis/: activity_db_generator.py
tools/localization_analysis/include/localization_analysis/: map_matcher.h
tools/localization_analysis/src/: map_matcher.cc
tools/localization_analysis/tools/: run_map_matcher.cc
