<?xml version="1.0"?>
<package format="2">
  <name>coordinator</name>
  <version>0.0.0</version>
  <description>
    Coordinator(s) for ASAP tests.
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>actionlib</depend>
  <depend>tf</depend>
  <depend>ff_util</depend>
  <depend>ff_msgs</depend>
  <depend>msg_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>ff_common</depend>
  <depend>data</depend>
  <depend>std_msgs</depend>
  <depend>ff_nodelet</depend>
  <depend>ff_flight</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
